Made code refactoring.